# rust-dev-env

./: .gitignore  README.md  presentation.odp  release  rust-introduction.odp
cargo_home/: release
cargo_home/etc/: initial.Cargo.toml  initial.Cargo.toml.backup
devops/: README.md  download.thirdparty.cargo.crates.sh  download_crates.sh  gitea.app.ini  import_creates.sh  install.sh  release  release.proxy  run.sh  update.local.thirdparty.registry.sh  update.sh
doc/01.preparing-rust-sdk-directory/: README.md
doc/02.preparing-local-source-code-repository/: README.md
doc/02.preparing-local-source-code-repository-and-local-crate-registry/: README.md
doc/03.preparing-local-crate-repository/: README.md
doc/04.updating-local-thirdparty-crate-registry/: README.md
doc/05.preparing-local-package-repository/: README.md
doc/06.preparing-runtime-environment/: README.md
doc/06.preparing-services/: README.md
doc/07.preparing-ides/: README.md
doc/08.preparing-data-tools/: README.md
doc/09-rust-project-templates/: README.md
doc/12-rust-project-templates/: README.md
ide/: README.md  code.sh  install.sh  release
ide/07.preparing-ides/: README.md
reference-projects/: COMMON_MISTAKES.md  PRINCIPLES.md  PROJECT_LIST.md  README.md
reference-projects/01.base-code_quality/project-01/: Cargo.toml  build.sh
reference-projects/01.base-debug/project-01/: Cargo.toml
reference-projects/01.base-logging/project-01/: Cargo.toml
reference-projects/01.base-minimum_sized_executable/project-01/: build.sh
reference-projects/01.base-packaging/project-01/: Cargo.toml  build.sh
reference-projects/01.base-packaging/project-01/etc/: kia-sorento.toml  project-01.toml  release  toyota-corolla.toml
reference-projects/01.base-packaging/project-01/src/: main.rs
reference-projects/01.base-rust_binary_lib/libproject-01/: Cargo.toml
reference-projects/01.base-rust_grpc_lib/: run.sh
reference-projects/01.base-rust_grpc_lib/project-03/: Cargo.toml
reference-projects/01.base-rust_lib/: README.md
reference-projects/01.base-rust_lib/project-01/: Cargo.toml  build.rs  build.sh
reference-projects/01.base-rust_lib/project-02/: Cargo.toml
reference-projects/01.base-rust_lib/project-02/src/: server.rs
reference-projects/01.base-rust_project_configurations/project-01/: Cargo.toml
reference-projects/01.base-test/project-01/: Cargo.toml  build.sh
reference-projects/01.base-test/project-02/: Cargo.toml  default_5178969159127496035_0_170390.profraw  default_5178969159127496035_0_170480.profraw
reference-projects/01.base-test/project-03/: Cargo.toml  build.sh
rust/: README.md  install.sh  release
src/prepare-env-scripts/: 01.prepare.rust.sdk.directory.sh  02.prepare.gitea.source.and.crate.repo.sh  02.prepare.gitea.source.repo.sh  04.clean.previous.dependencies.sh  04.configure.proxy.sh  04.pack.all.downloaded.in.this.day.sh  gitea.app.ini  gitea.db
src/rust-project-templates/1.i.b-base-minimum_executable_size-level_2/project-01/: Cargo.toml  build.sh
src/rust-project-templates/1.iii.base-versioning_and_dependency_management/project-01/: Cargo.toml  build.sh
(+29 files in other folders)
