[package]
name = "project-02"
version = "0.1.0"
edition = "2024"
publish = ["cargo-prod","cargo-test"]

[[bin]]
name = "helloworld-server"
path = "src/server.rs"


[dependencies]
project-01 = { version = "*", registry = "cargo-test" }
tonic = "*"
prost = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

