[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[package]
name = "project-01"
version = "0.1.0"
edition = "2024"
authors = ["mehmetpekmezci <mehmet.pekmezci.32@gmail.com>"]
description=" Example Debugging Project, look into the build.sh file to see gdb debug commands"
categories = ["my-category-01", "segment-01::csci-01::csc-01"]
#build = "custom_build_name.rs"
exclude = ["/ci", "images/", ".*"]
include = ["/src", "COPYRIGHT", "/examples", "!/examples/big_example"]
#publish = ["some-registry-name"]

## used while compiling with  "cargo build" , "cargo build --release"
[dependencies]
time = "0.1.12"
regex = "0.1.41"


## used while compiling with "cargo build --tests", "cargo build --benches", "cargo build --examples"
[dev-dependencies]
serde = "0.9"

